--- a/.semaphore/semaphore.yml
+++ b/.semaphore/semaphore.yml
@@ -6,6 +6,17 @@ agent:
     os_image: ubuntu1804
 
 blocks:
+  - name: "Prepare"
+    task:
+      jobs:
+      - name: update
+        commands:
+            - echo "Updating build environment..."
+            - sudo apt-get -y update
+      - name: install
+        commands:
+            - echo "Installing build dependencies..."
+            - sudo apt-get install -y git build-essential kernel-package fakeroot libncurses5-dev libssl-dev ccache
   - name: "Build"
     task:
       env_vars:
