--- a/.semaphore/semaphore.yml
+++ b/.semaphore/semaphore.yml
@@ -16,7 +16,7 @@ blocks:
       - name: install
         commands:
             - echo "Installing build dependencies..."
-            - sudo apt-get install -y git build-essential fakeroot libncurses5-dev libssl-dev ccache
+            - sudo apt-get install -y git flex build-essential fakeroot libncurses5-dev libssl-dev ccache libelf-dev bc
   - name: "Build"
     task:
       env_vars:
@@ -30,5 +30,6 @@ blocks:
           - echo $APP_ENV
           - echo "configure..."
           - make allyesconfig
+          - make -j `getconf _NPROCESSORS_ONLN` LOCALVERSION=-test
           - echo "done"
 
