one last attempt before giving up on semaphore.
Signed-off-by: Kristen Carlson Accardi <kristen@linux.intel.com>

--- a/.semaphore/semaphore.yml
+++ b/.semaphore/semaphore.yml
@@ -28,7 +28,7 @@ blocks:
             - cp testutils/ccloudvm/semaphore.yaml ~/.ccloudvm/workloads
             - ccloudvm setup
             - sudo chmod ugo+rwx /dev/kvm
-            - ccloudvm create semaphore --debug --qemuport=9999 &
+            - ccloudvm create semaphore --qemuport=9999 &
             - nc localhost 9999
   - name: "Build"
     task:
