fixup: add qemu dependencies
Signed-off-by: Kristen Carlson Accardi <kristen@linux.intel.com>

--- a/.semaphore/semaphore.yml
+++ b/.semaphore/semaphore.yml
@@ -13,7 +13,7 @@ blocks:
             - checkout
             - echo "Updating Ubuntu package dependencies..."
             - sudo apt-get -y update
-            - sudo apt-get install -y git flex build-essential fakeroot libncurses5-dev libssl-dev ccache libelf-dev bc python3-pip --fix-missing
+            - sudo apt-get install -y git flex build-essential fakeroot libncurses5-dev libssl-dev ccache libelf-dev bc python3-pip qemu-kvm qemu --fix-missing
             - echo "Installing test dependencies..."
             - git clone https://github.com/ezequielgarcia/virtme.git
             - cd virtme
