fixup: don't forget to checkout the right branch.
Signed-off-by: Kristen Carlson Accardi <kristen@linux.intel.com>

--- a/.semaphore/semaphore.yml
+++ b/.semaphore/semaphore.yml
@@ -24,6 +24,7 @@ blocks:
             - mv ccloudvm ccloudvm.orig
             - ln -s ../kaccardi/ccloudvm ccloudvm
             - cd ccloudvm
+            - git checkout origin/disable-kvm
             - go install ./...
             - popd
             - ccloudvm setup
